--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,8 @@
 <html>
   <body>
     <div id="ChangeTime">
-      <input id="targetTime" value="19:59:59.400">
+      <input id="targetTime">
+      <button id="run">run</button>
     </div>
     <script src="popup.js"></script>
   </body>
